# OpenXRProvider

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenXRProvider/: CMakeLists.txt  Doxyfile  LICENSE
OpenXRProvider/docs/html/: _open_x_r_provider_8cpp.html  _open_x_r_provider_8cpp__incl.map  _open_x_r_provider_8h__dep__incl.map  _open_x_r_provider_8h__dep__incl.md5  _open_x_r_provider_8h__incl.map  _open_x_r_provider_8h__incl.md5  _open_x_r_provider_8h_source.html  _r_e_a_d_m_e_8md.html  _x_r_base_8h.html  _x_r_base_8h__dep__incl.map  _x_r_base_8h__incl.md5  _x_r_base_8h_source.html  _x_r_base_ext_8h__dep__incl.map  _x_r_base_ext_8h_source.html  _x_r_common_8h.html  _x_r_common_8h__dep__incl.map  _x_r_common_8h__dep__incl.md5  _x_r_common_8h__incl.map  _x_r_common_8h__incl.md5  _x_r_event_handler_8cpp.html  _x_r_event_handler_8cpp__incl.map  _x_r_event_handler_8h.html  _x_r_event_handler_8h__dep__incl.map  _x_r_event_handler_8h__dep__incl.md5  _x_r_event_handler_8h__incl.map  _x_r_event_handler_8h__incl.md5  _x_r_event_handler_8h_source.html  _x_r_ext_visibility_mask_8cpp__incl.map  _x_r_ext_visibility_mask_8h.html  _x_r_ext_visibility_mask_8h__dep__incl.md5  _x_r_ext_visibility_mask_8h__incl.map  _x_r_ext_visibility_mask_8h_source.html  _x_r_graphics_a_p_i_defines_8h__dep__incl.map  _x_r_graphics_a_p_i_defines_8h__dep__incl.md5  _x_r_graphics_a_p_i_defines_8h__incl.map  _x_r_graphics_aware_types_8cpp.html  _x_r_graphics_aware_types_8cpp__incl.map  _x_r_graphics_aware_types_8cpp__incl.md5  _x_r_graphics_aware_types_8h.html  _x_r_graphics_aware_types_8h__dep__incl.map  (+82 more)
OpenXRProvider/docs/html/search/: all_0.js  all_1.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_2.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_11.js  variables_12.js  variables_3.js  variables_8.js  (+3 more)
OpenXRProvider/docs/latex/: _open_x_r_provider_8cpp.tex  _open_x_r_provider_8h.tex  _open_x_r_provider_8h__incl.md5  _r_e_a_d_m_e_8md.tex  _x_r_base_8h.tex  _x_r_base_8h__incl.md5  _x_r_base_ext_8h__incl.md5  _x_r_common_8h.tex  _x_r_common_8h__dep__incl.md5  _x_r_common_8h__incl.md5  _x_r_event_handler_8h.tex  _x_r_event_handler_8h__incl.md5  _x_r_ext_visibility_mask_8cpp__incl.md5  _x_r_ext_visibility_mask_8h.tex  _x_r_ext_visibility_mask_8h__dep__incl.md5  _x_r_graphics_a_p_i_defines_8h__dep__incl.md5  _x_r_graphics_aware_types_8cpp.tex  _x_r_graphics_aware_types_8cpp__incl.md5  _x_r_platform_defines_8h.tex  _x_r_render_manager_8cpp__incl.md5  annotated.tex  class_open_x_r_provider_1_1_x_r_base.tex  class_open_x_r_provider_1_1_x_r_base__inherit__graph.md5  class_open_x_r_provider_1_1_x_r_event_handler.tex  class_open_x_r_provider_1_1_x_r_event_handler__coll__graph.md5  class_open_x_r_provider_1_1_x_r_ext_visibility_mask__coll__graph.md5  class_open_x_r_provider_1_1_x_r_graphics_a_p_i.tex  class_open_x_r_provider_1_1_x_r_provider.tex  class_open_x_r_provider_1_1_x_r_provider__coll__graph.md5  class_open_x_r_provider_1_1_x_r_render_manager.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  namespace_open_x_r_provider.tex  refman.tex  struct_open_x_r_provider_1_1_x_r_app_graphics_info.tex  struct_open_x_r_provider_1_1_x_r_app_info.tex  struct_open_x_r_provider_1_1_x_r_callback.tex  struct_open_x_r_provider_1_1_x_r_eye_state.tex  struct_open_x_r_provider_1_1_x_r_eye_state__coll__graph.md5  (+5 more)
OpenXRProvider/include/: OpenXRProvider.h  XRBase.h  XRBaseExt.h  XRBaseInput.h  XRCommon.h  XRCore.h  XREventHandler.h  XRExtHandTracking.h  XRExtVisibilityMask.h  XRGraphicsAPIDefines.h  XRGraphicsAwareTypes.h  XRPlatformDefines.h  XRRenderManager.h
OpenXRProvider/include/extensions/: XRExtHandJointsMotionRange.h  XRExtHandTracking.h  XRExtVisibilityMask.h
OpenXRProvider/include/input/: XRInput.h  XRInputProfile_GoogleDaydream.h  XRInputProfile_HTCCosmos.h  XRInputProfile_HTCVive.h  XRInputProfile_HTCVivePro.h  XRInputProfile_KhronosSimple.h  XRInputProfile_MicrosoftMR.h  XRInputProfile_MicrosoftXBox.h  XRInputProfile_OculusGo.h  XRInputProfile_OculusTouch.h  XRInputProfile_ValveIndex.h
OpenXRProvider/include/rendering/: XRGraphicsAPIDefines.h  XRGraphicsAwareTypes.h  XRRender.h
OpenXRProvider/src/: OpenXRProvider.cpp  XRCore.cpp  XREventHandler.cpp  XRExtHandTracking.cpp  XRExtVisibilityMask.cpp  XRGraphicsAwareTypes.cpp  XRRenderManager.cpp
OpenXRProvider/src/extensions/: XRExtHandJointsMotionRange.cpp  XRExtHandTracking.cpp  XRExtVisibilityMask.cpp
OpenXRProvider/src/input/: XRInput.cpp  XRInputProfile_GoogleDaydream.cpp  XRInputProfile_HTCCosmos.cpp  XRInputProfile_HTCVive.cpp  XRInputProfile_HTCVivePro.cpp  XRInputProfile_KhronosSimple.cpp  XRInputProfile_MicrosoftMR.cpp  XRInputProfile_MicrosoftXBox.cpp  XRInputProfile_OculusGo.cpp  XRInputProfile_OculusTouch.cpp  XRInputProfile_ValveIndex.cpp
OpenXRProvider/src/rendering/: XRGraphicsAwareTypes.cpp  XRRender.cpp
Sandbox/include/: IXRMirror.h  SandboxCommon.h  Utils.h  XRMirror.h  XRMirror_DX11.h  XRMirror_GL.h  main.h
Sandbox/src/: Sandbox.cpp  Sandbox.h  SandboxCommon.cpp  Utils.cpp  XRMirror.cpp  XRMirror_DX11.cpp  XRMirror_GL.cpp  main.cpp
Sandbox_Archive/: Doxyfile
Sandbox_Archive/include/: Utils.h  XRMirror.h
Sandbox_Archive/src/: Utils.cpp  main.cpp
docs/html/: _open_x_r_provider_8cpp.html  _open_x_r_provider_8cpp__incl.map  _open_x_r_provider_8cpp__incl.md5  _open_x_r_provider_8h.html  _open_x_r_provider_8h__dep__incl.map  _open_x_r_provider_8h__dep__incl.md5  _open_x_r_provider_8h__incl.map  _open_x_r_provider_8h__incl.md5  _open_x_r_provider_8h_source.html  _r_e_a_d_m_e_8md.html  _x_r_base_8h.html  _x_r_base_8h__dep__incl.map  _x_r_base_8h__dep__incl.md5  _x_r_base_8h__incl.map  (+173 more)
(+326 files in other folders)
